--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - unzip -q google_appengine_1.9.40.zip
   - pip install codecov
   - pip install -r requirements.txt -t libs
+  - pip install factory-boy
 
 before_script:
   - export PATH=$PATH:$PWD/google_appengine
